[gd_scene load_steps=17 format=2]

[ext_resource path="res://Interfacce Utente/Inventario/Immagini/background.png" type="Texture" id=1]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/paper background.png" type="Texture" id=2]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/exit.png" type="Texture" id=3]
[ext_resource path="res://Interfacce Utente/Inventario/Font/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/wood background.png" type="Texture" id=5]
[ext_resource path="res://Interfacce Utente/Inventario/Shoplist.gd" type="Script" id=6]
[ext_resource path="res://Interfacce Utente/Inventario/smithShopUI.gd" type="Script" id=7]
[ext_resource path="res://DUNGEON/PNG/hud_coin.png" type="Texture" id=8]
[ext_resource path="res://Interfacce Utente/Inventario/Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://DUNGEON/PNG/wrench-icon.png" type="Texture" id=10]
[ext_resource path="res://Interfacce Utente/Inventario/FontShop.tres" type="DynamicFont" id=11]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/paper background_pressed.png" type="Texture" id=12]
[ext_resource path="res://DUNGEON/PNG/crystal.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DoubleEdgesBackground" type="TextureRect" parent="."]
anchor_left = 0.0292969
anchor_top = 0.05
anchor_right = 0.970703
anchor_bottom = 0.95
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PaperBackground" type="TextureRect" parent="DoubleEdgesBackground"]
anchor_left = 0.0176349
anchor_top = 0.0259259
anchor_right = 0.981328
anchor_bottom = 0.972222
margin_top = 9.53674e-07
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="DoubleEdgesBackground/PaperBackground"]
anchor_left = 0.500538
anchor_right = 0.500538
anchor_bottom = 0.0156556
margin_left = -3.05176e-05
margin_right = -3.05176e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="coins" type="TextureRect" parent="DoubleEdgesBackground/PaperBackground/Control"]
margin_left = -62.0
margin_top = -16.0
margin_right = -12.0
margin_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground/Control/coins"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -13.5
margin_right = 47.0
margin_bottom = 17.5
custom_fonts/font = ExtResource( 11 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chiavi" type="TextureRect" parent="DoubleEdgesBackground/PaperBackground/Control"]
margin_left = 105.0
margin_right = 224.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground/Control/chiavi"]
margin_left = 84.0
margin_right = 140.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 11 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade Price" type="TextureRect" parent="DoubleEdgesBackground/PaperBackground/Control"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground/Control/Upgrade Price"]
margin_left = 84.0
margin_right = 140.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 11 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DoubleEdgesBackground/PaperBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Header" type="HBoxContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer"]
margin_right = 1161.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="ManuTitle" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/Header"]
margin_top = 5.0
margin_right = 1107.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="ExitButton" type="TextureButton" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/Header"]
margin_left = 1111.0
margin_right = 1161.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainElements" type="HBoxContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer"]
margin_top = 54.0
margin_right = 1161.0
margin_bottom = 589.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements"]
margin_top = 260.0
margin_right = 20.0
margin_bottom = 274.0
rect_min_size = Vector2( 20, 0 )

[node name="itemScroll" type="ScrollContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements"]
margin_left = 24.0
margin_right = 833.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/itemScroll"]
margin_right = 809.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="ItemInspector" type="VBoxContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements"]
margin_left = 837.0
margin_right = 1137.0
margin_bottom = 535.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="ItemInspector1" type="VBoxContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector"]
margin_right = 300.0
margin_bottom = 344.0
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/ItemInspector1"]
margin_right = 300.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "Stats:"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/ItemInspector1"]
margin_top = 41.0
margin_right = 300.0
margin_bottom = 326.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer"]
margin_right = 226.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer" instance=ExtResource( 9 )]
margin_bottom = 285.0

[node name="ItemIcon" type="TextureRect" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer"]
margin_left = 230.0
margin_right = 300.0
margin_bottom = 285.0
rect_min_size = Vector2( 70, 70 )

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/ItemInspector1"]
margin_top = 330.0
margin_right = 300.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 14 )

[node name="UpgradeLabel" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector"]
margin_top = 348.0
margin_right = 300.0
margin_bottom = 387.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Upgrade Store" type="TextureRect" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector"]
margin_top = 391.0
margin_right = 300.0
margin_bottom = 461.0
rect_min_size = Vector2( 180, 70 )
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true

[node name="upgrade" type="TextureButton" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/Upgrade Store"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/Upgrade Store/upgrade"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.8147e-06
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "Upgrade Store"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy" type="TextureRect" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector"]
margin_top = 465.0
margin_right = 300.0
margin_bottom = 535.0
rect_min_size = Vector2( 180, 70 )
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true

[node name="buy" type="TextureButton" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/buy"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/buy/buy"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.8147e-06
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "Buy Item"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements"]
margin_left = 1141.0
margin_top = 260.0
margin_right = 1161.0
margin_bottom = 274.0
rect_min_size = Vector2( 20, 0 )

[node name="ButtonMargin" type="Label" parent="DoubleEdgesBackground/PaperBackground/VBoxContainer"]
margin_top = 593.0
margin_right = 1161.0
margin_bottom = 613.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="DoubleEdgesBackground/PaperBackground"]
margin_left = 73.0205
margin_top = 542.891
margin_right = 151.02
margin_bottom = 581.891
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tell me what ya need"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DoubleEdgesBackground/PaperBackground/VBoxContainer/Header/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/Upgrade Store/upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="DoubleEdgesBackground/PaperBackground/VBoxContainer/MainElements/ItemInspector/buy/buy" to="." method="_on_buy_pressed"]
